[2단계 - 자동차 경주 리팩터링] 다온(조형익) 미션 제출합니다. (#758)
* feat: 예외메세지 내 입력값 표시 추가

* feat: 가장 멀리 전진한 위치 산출 로직 리팩토링

* refactor: Car 내 필드 VO로 리팩토링

- 원시값 필드 -> VO로 변경
- 차 이름 Validation CarName 내로 이동
- CarName 테스트 코드 추가
- @BeforeEach 활용하여 테스트 코드 수정

* refactor: RacingGame 내 TryCount VO로 변경

- TryCount VO 추가
- Validation 로직 TryCount로 이동
- 관련 테스트 코드 수정

* refactor: 경주 결과 출력 로직 리팩토링

- 가독성을 위한 변수 분리
- 예상 출력 문구 주석 추가

* Style: 불필요한 변수 인라인화

* Style: 가독성을 위한 변수 분리

* refactor: Cars 내 항상 함께 쓰이는 메서드 통합

- makeCarMove()
- getRoundResult()

* refactor: TotalResult 생성 로직 위치 변경

- RacingGame -> Cars
- makeCarsMove() 접근제어자 private 변경
- makeCarMove() 테스트 코드 삭제

* refactor: Cars 생성 로직 최적화

- Collectors.collectingAndThen() 적용

* refactor: 불필요한 생성자 삭제

---------

Co-authored-by: ikjo39 <wer04129@gmail.com>