@@ -1,11 +1,14 @@
 package racingcar.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import racingcar.model.Car;
+import racingcar.model.CarName;
 import racingcar.model.Cars;
 import racingcar.model.RacingGame;
 import racingcar.model.RandomNumberGenerator;
 import racingcar.model.TotalResult;
+import racingcar.model.TryCount;
 import racingcar.view.InputView;
 import racingcar.view.OutputView;
 
@@ -31,15 +34,15 @@ public class RacingController {
 
     private Cars createCars() {
         List<String> carNames = inputView.readCarNames();
-        List<Car> cars = carNames.stream()
+        return carNames.stream()
+                .map(CarName::new)
                 .map(Car::new)
-                .toList();
-        return new Cars(cars);
+                .collect(Collectors.collectingAndThen(Collectors.toList(), Cars::new));
     }
 
     private RacingGame createRacingGame(Cars cars) {
         int tryCount = inputView.readTryCount();
-        return new RacingGame(tryCount, cars, new RandomNumberGenerator());
+        return new RacingGame(new TryCount(tryCount), cars, new RandomNumberGenerator());
     }
 
     private void printResult(TotalResult totalResult) {
